# ChurnGuard

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routers/: health.py  predict.py
dashboard/: app.py
dashboard/pages/: 1_risk_table.py  2_customer_deep_dive.py  3_business_impact.py  4_chatbot.py
models/: shap_explainer_v1.pkl  xgb_v1.pkl
src/data/: loader.py  preprocessor.py
src/explainability/: shap_explainer.py
src/features/: engineering.py
src/models/: baseline.py  evaluator.py  random_forest.py  xgboost_model.py
tests/: test_api.py  test_features.py  test_model.py
